# Emberwood

./: CMakeLists.txt  README.md  buildlog.txt  test_ttf.cpp  vcpkg.json
include/SDL2/: vcpkg.spdx.json  vcpkg_abi_info.txt
lib/: SDL2main.lib
src/: CharacterModule.cpp  CharacterModule.h  main.cpp
src/characters/: Cape.cpp  Cape.h  Knight.cpp  Knight.h  Wizard.cpp  Wizard.h  WizardDanceController.cpp  WizardDanceController.h
src/engine/: Animation.cpp  Animation.h  Animator.cpp  Animator.h  Bone.h  Character.h  Checkerboard.cpp  Checkerboard.h  Color.h  ControllerProfile.h  Game.cpp  Game.h  KnightCharacter.cpp  KnightCharacter.h  Mesh.h  Renderer.cpp  TextureManager.cpp  TextureManager.h  WizardCharacter.cpp  WizardCharacter.h  WizardDemo.cpp  WizardDemo.h  World.cpp  World.h
src/entities/: AOEEffect.h  Entity.h  Tree.cpp  Tree.h
